[tool.poetry]
name = "trading_ig"
version = "0.0.19"
description = "A lightweight Python wrapper for the IG Markets API"
authors = ["Femto Trader <femto.trader@gmail.com>", "Andy Geach <andy@bugorfeature.net>"]
maintainers = ["Andy Geach <andy@bugorfeature.net>"]
license = "BSD-3-Clause"
readme = "README.rst"
homepage = "https://github.com/ig-python/ig-markets-api-python-library"
repository = "https://github.com/ig-python/ig-markets-api-python-library"
documentation = "https://trading-ig.rtfd.io/"
keywords = ["trading", "spread betting", "CFDs"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Cython",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries",
    "License :: OSI Approved :: BSD License",
]

[tool.poetry.dependencies]
python = ">=3.7,<4.0"
requests = "^2.24"
pycryptodome = "^3.9"
requests-cache = "^0.5"
six = "^1.15"

pandas = { version = "^1", optional = true }
munch = { version = "^2.5", optional = true }
tenacity = {version = "^8", optional = true}

[tool.poetry.extras]
pandas = ["pandas"]
munch = ["munch"]
tenacity = ["tenacity"]
sphinx = ["sphinx"]
docs = [
    "sphinx"
]

[tool.poetry.dev-dependencies]
flake8 = "^3.9"
pytest = "^6.2"
responses = "^0.12"
coveralls = "^3.2"
sphinx-rtd-theme = {version = "^1.0.0", optional = true}
importlib-metadata = "==4.13.0"

[tool.poetry.urls]
"Issues" = "https://github.com/ig-python/ig-markets-api-python-library/issues"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
